--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -20,6 +20,9 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Grant execute permission for gadlew
+        run: chmod +x ./gradlew
+
       - name: Build With Gradle
         run: ./gradlew build
 
