--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Grant execute permission for gadlew
+      - name: Grant execute permission for grgadlew
         run: chmod +x ./gradlew
 
       - name: Build With Gradle
